Site styling completely cleared. Refactored top-level page linking.
# Conflicts:
#	.DS_Store
#	index.html

--- a/notes.html
+++ b/notes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
-title: "olsen.works notes"
+layout: page
+title: Notes
+permalink: /notes/
 ---
 <div class="home">
         <div class="wrapper">
-              <h1 class="page-title">Notes</h1>
               <p class="page-description">This page contains notes. Notes are shorter, often casual, thoughts or observations on a particular topic or text. They may be a good source of momentary reflection. I hope they generate interest and support your own thinking and examinations. Let me know.</p>
                       {% if site.categories.note == null %}
                       {%include 404.html %}
