--- a/work-with.html
+++ b/work-with.html
@@ -1,10 +1,10 @@
 ---
-layout: default
-title: "olsen.works work-with"
+layout: page
+title: Work With Me
+permalink: /work-with-me/
 ---
 <div class="home">
   <div class="wrapper">
-  	<h1 class="page-title">Work with Me</h1>
   	<p class="page-description">I'd be happy to work with you on some of your own projects. If you think we'd work well together, or think I offer a skill set well suited to help fulfill your goals, let me know and I may be able to lend a hand depending on my current availibility. Please send me an <a href="mailto:scg.olsen@gmail.com?Subject=Let's%20Work%20Together.">email</a> at scg.olsen@gmail.com detailing your project and how I might contribute.</p>
   </div>
 </div>
