removed main nav

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: default
 title: Home
-info: This is the personal site of Scott Olsen. You'll find a collection of some of my written work on this site. I'm happy you stopped by and hope you get some enjoyment out of my essays or fictions. You can access the most recently posted content below.
+info: This is the personal site of Scott Olsen. I maintain a portion of my written work on this site. I hope these pieces give you a few minutes of enjoyment. If you would like to chat, berate me, or perhaps profess boundless love or seething hatred, send me an email at scg.olsen@gmail.com. My work is listed below.
 ---
 <div class="home">
 	<div class="nav-info-container-home">
-		<nav class="site-nav-alt">
+		<!--<nav class="site-nav-alt">
 			{% for item in site.pages %}
 			{% if page.url != item.url and item.title != "About" and item.title != "Work With Me" and item.title != "css" and item.title != "feed" %}
 			<a class="page-link" href="{{ item.url | prepend: site.baseurl }}"> {{ item.title }}</a>
 			{% endif %}
 			{% endfor %}
-		</nav>
+		</nav>-->
 		<aside class="page-info">
 			<section class="info">
 				<h4 class="info-heading">Info</h4>
