(style,posts): Reversion to old site layout. Added post: That Old Deity

--- a/notes.html
+++ b/notes.html
@@ -4,8 +4,8 @@ title: "olsen.works notes"
 ---
 <div class="home">
         <div class="wrapper">
-              <h1 class="page-title">Notes</h1>
-              <p class="page-description">This page contains notes. Notes are shorter, often casual, thoughts or observations on a particular topic or text. They may be a good source of momentary reflection. I hope they generate interest and support your own thinking and examinations. Let me know.</p>
+              <h1 class="page-title">Dispatch</h1>
+              <p class="page-description">This page contains dispatches. Dispatches are my (usually) shorter, casual thoughts or observations on a particular topic or text. This is essentially a blog in miniature. I hope they generate interest and support your own thinking and examinations. Let me know.</p>
                       {% if site.categories.note == null %}
                       {%include 404.html %}
                       {% else %}
