--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@ title: "olsen.works notes"
 <div class="home">
         <div class="wrapper">
               <h1 class="page-title">Dispatch</h1>
-              <p class="page-description">This page contains dispatches. Dispatches are my (usually) shorter, casual thoughts or observations on a particular topic or text. This is essentially a blog in miniature. I hope they generate interest and support your own thinking and examinations. Let me know.</p>
+              <p class="page-description">This page contains dispatches. Dispatches are (usually) shorter, casual thoughts or observations on a particular topic or text: a blog in miniature. I hope they support your own thinking and examinations. Let me know.</p>
                       {% if site.categories.note == null %}
                       {%include 404.html %}
                       {% else %}
