--- a/shell.html
+++ b/shell.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Digital Gamera: Learning the Shell"
-render: project
+render: none
 abstract: There's a powerful little program you might have overlooked. You can use it to copy files, write a book, send email, or browse the internet. Let's learn how to use it.
 ---
 <div class="home">
